# donetick-tui

./: .env.example  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
examples/: test_api.rs
src/: app.rs  config.rs  event.rs  main.rs  ui.rs
src/api/: client.rs  error.rs  mod.rs  types.rs
